--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,21 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Ignore generated public folder files (but not the folder itself)
+client/public/*.cache
+client/public/*.map
+backend/public/*.cache
+backend/public/*.map
+
+# Ignore specific files in the public folder
+client/public/*.DS_Store
+backend/public/*.DS_Store
+
+# Miscellaneous
+*.bak
+*.backup
+*.tmp
+*.lock
+*.log
