--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.3.0",
+    "@tanstack/react-query": "^5.52.1",
     "axios": "^1.7.4",
     "js-cookie": "^3.0.5",
     "mapbox-gl": "^3.6.0",
