--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,7 +1,19 @@
 {
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
   "extends": ["eslint:recommended", "plugin:react/recommended"],
   "plugins": ["react"],
   "rules": {
+    "react/react-in-jsx-scope": "off",
     "react/prop-types": "off"
   }
 }
