--- a/client/package.json
+++ b/client/package.json
@@ -25,13 +25,13 @@
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-class-properties": "^7.24.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
